--- a/.tekton/microshift-gitops-rpm-pull-request.yaml
+++ b/.tekton/microshift-gitops-rpm-pull-request.yaml
@@ -9,7 +9,7 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "main" && ( "rpms/microshift-gitops/***".pathChanged() || ".tekton/microshift-gitops-rpm-pull-request.yaml".pathChanged()
+      == "main"
       )
   creationTimestamp: null
   labels:
