--- a/.tekton/microshift-gitops-rpm-push.yaml
+++ b/.tekton/microshift-gitops-rpm-push.yaml
@@ -8,8 +8,7 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "main" && ( "rpms/microshift-gitops/***".pathChanged() || ".tekton/microshift-gitops-rpm-pull-request.yaml".pathChanged()
-      )
+      == "main"
   labels:
     appstudio.openshift.io/application: test-rpms-builds
     appstudio.openshift.io/component: microshift-gitops-rpm
