--- a/microshift-gitops.spec.in
+++ b/microshift-gitops.spec.in
@@ -106,10 +106,10 @@ cat <<EOF >>"manifests/microshift-gitops/kustomization.yaml"
 images:
   - name: quay.io/argoproj/argocd
     newName: registry.redhat.io/openshift-gitops-1/argocd-rhel9
-    digest: "sha256:e9f89c838a37794fe47d6aa5496f9db2d604e38ed51193e236191dbff0e41c92"
+    digest: "REPLACE_ARGO_CD_CONTAINER_SHA_ARM"
   - name: redis
     newName: registry.redhat.io/rhel9/redis-6
-    digest: "sha256:c19f537eaf582bfa164717ddcf76a51a1b50abdd798d4314f345df7bcc7cec10"
+    digest: "REPLACE_REDIS_CONTAINER_SHA_ARM"
 EOF
 %endif
 
@@ -118,10 +118,10 @@ cat <<EOF >>"manifests/microshift-gitops/kustomization.yaml"
 images:
   - name: quay.io/argoproj/argocd
     newName: registry.redhat.io/openshift-gitops-1/argocd-rhel9
-    digest: "sha256:78c0715198d0d9dc8f4fc25197423412eabd5fd4d82151a41f3568a74c4e7317"
+    digest: "REPLACE_ARGO_CD_CONTAINER_SHA_X86"
   - name: redis
     newName: registry.redhat.io/rhel9/redis-6
-    digest: "sha256:e96c0a8cc1632130386dd77e4dc808f0661e79e8397d13c694f5e0eced63ede5"
+    digest: "REPLACE_REDIS_CONTAINER_SHA_X86"
 EOF
 %endif
 
@@ -130,11 +130,11 @@ mkdir -p "microshift-assets"
 cat <<EOF >"microshift-assets/release-gitops-arm64.json"
 {
   "release": {
-    "base": "1.16.1-1"
+    "base": "REPLACE_ARGO_CD_VERSION"
   },
   "images": {
-    "openshift-gitops-argocd": "registry.redhat.io/openshift-gitops-1/argocd-rhel9@sha256:e9f89c838a37794fe47d6aa5496f9db2d604e38ed51193e236191dbff0e41c92",
-    "redis": "registry.redhat.io/rhel9/redis-6@sha256:c19f537eaf582bfa164717ddcf76a51a1b50abdd798d4314f345df7bcc7cec10"
+    "openshift-gitops-argocd": "registry.redhat.io/openshift-gitops-1/argocd-rhel9@REPLACE_ARGO_CD_CONTAINER_SHA_ARM",
+    "redis": "registry.redhat.io/rhel9/redis-6@REPLACE_REDIS_CONTAINER_SHA_ARM"
   }
 }
 EOF
@@ -142,11 +142,11 @@ EOF
 cat <<EOF >"microshift-assets/release-gitops-x86_64.json"
 {
   "release": {
-    "base": "1.16.1-1"
+    "base": "REPLACE_ARGO_CD_VERSION"
   },
   "images": {
-    "openshift-gitops-argocd": "registry.redhat.io/openshift-gitops-1/argocd-rhel9@sha256:78c0715198d0d9dc8f4fc25197423412eabd5fd4d82151a41f3568a74c4e7317",
-    "redis": "registry.redhat.io/rhel9/redis-6@sha256:e96c0a8cc1632130386dd77e4dc808f0661e79e8397d13c694f5e0eced63ede5"
+    "openshift-gitops-argocd": "registry.redhat.io/openshift-gitops-1/argocd-rhel9@REPLACE_ARGO_CD_CONTAINER_SHA_X86",
+    "redis": "registry.redhat.io/rhel9/redis-6@REPLACE_REDIS_CONTAINER_SHA_X86"
   }
 }
 EOF
