--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -16,8 +16,14 @@ spec:
   # Task 1: Clone the repository
   - name: fetch-repository
     taskRef:
-      name: git-clone
-      kind: ClusterTask
+      resolver: hub
+      params:
+      - name: name
+        value: git-clone
+      - name: kind
+        value: task
+      - name: version
+        value: "0.9"
     workspaces:
     - name: output
       workspace: source
