--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -9,11 +9,22 @@ spec:
   - name: tool-image-url
   - name: path-context
     default: "."
+  - name: package-name
+    description: The name of the package to build.
+  - name: ociStorage
+    description: The container registry where the final RPM artifact will be stored.
+  - name: target-branch
+    description: The target branch of the pull request.
+  - name: hermetic
+    description: Specifies whether the build should be hermetic.
+    default: "false"
+  
   workspaces:
   - name: source
   - name: git-auth
+  
   tasks:
-  # Task 1: Clone the repository
+  # Task 1: Clone the repository (no changes here)
   - name: fetch-repository
     taskRef:
       resolver: hub
@@ -35,8 +46,8 @@ spec:
     - name: revision
       value: $(params.revision)
   
-  # Task 2: Build your tool image with skopeo and other tools
-  - name: build-tool-image
+  # Task 2: Build your tools image (no changes here)
+  - name: build-tools-image
     runAfter: [fetch-repository]
     workspaces:
     - name: source
@@ -46,7 +57,6 @@ spec:
       value: $(params.tool-image-url)
     - name: context
       value: $(params.path-context)
-    # ⬇️ The Task is now defined inline using taskSpec ⬇️
     taskSpec:
       params:
       - name: image
@@ -72,18 +82,17 @@ spec:
           
           echo -n "$(params.image)" | tee "$(results.IMAGE_URL.path)"
   
-  # Task 3: Generate the .spec file using the tool image
-  - name: generate-spec
-    runAfter: [build-tool-image]
+  # Task 3: Generate the .spec file
+  - name: generate-spec-file
+    runAfter: [build-tools-image]
     workspaces:
     - name: source
       workspace: source
     params:
     - name: TOOL_IMAGE
-      value: $(tasks.build-tool-image.results.IMAGE_URL)
+      value: $(tasks.build-tools-image.results.IMAGE_URL)
     - name: PATH_CONTEXT
       value: $(params.path-context)
-    # ⬇️ This Task is also defined inline using taskSpec ⬇️
     taskSpec:
       params:
       - name: TOOL_IMAGE
@@ -102,7 +111,7 @@ spec:
   
   # Task 4: Build the RPM using the official Konflux CI task
   - name: build-rpm-package
-    runAfter: [generate-spec]
+    runAfter: [generate-spec-file]
     workspaces:
     - name: source
       workspace: source
@@ -115,3 +124,22 @@ spec:
         value: "main"
       - name: pathInRepo
         value: "task/rpmbuild.yaml"
+    params:
+    - name: package-name
+      value: $(params.package-name)
+    - name: ociStorage
+      value: $(params.ociStorage)
+    - name: target-branch
+      value: $(params.target-branch)
+    - name: hermetic
+      value: $(params.hermetic)
+    - name: PLATFORM
+      value: "linux/amd64"
+    - name: script-environment-image
+      value: ""
+    - name: dependencies-artifact
+      value: ""
+    - name: calculation-artifact
+      value: ""
+    - name: ociArtifactExpiresAfter
+      value: ""
