--- a/.tekton/microshift-gitops-rpm-push.yaml
+++ b/.tekton/microshift-gitops-rpm-push.yaml
@@ -17,27 +17,39 @@ metadata:
   namespace: nmirasch-tenant
 spec:
   params:
+  # Parameters for the final RPM artifact
   - name: ociStorage
     value: quay.io/redhat-user-workloads/nmirasch-tenant/microshift-gitops-rpm:{{revision}}
   - name: package-name
     value: microshift-gitops
+  
+  # Git parameters
   - name: git-url
     value: "{{ source_url }}"
   - name: revision
     value: "{{ revision }}"
   - name: target-branch
     value: "{{ target_branch }}"
+  
+  # New parameter for the temporary tools image
+  - name: tool-image-url
+    value: quay.io/redhat-user-workloads/nmirasch-tenant/microshift-gitops-builder:{{revision}}
+  
+  # General parameters
+  - name: path-context
+    value: "."
   - name: hermetic
     value: "true"
+  
   pipelineRef:
     resolver: git
     params:
     - name: url
-      value: "https://github.com/konflux-ci/rpmbuild-pipeline.git"
+      value: "{{ source_url }}"
     - name: revision
-      value: main
+      value: "{{ revision }}"
     - name: pathInRepo
-      value: pipeline/build-rpm-package.yaml
+      value: .tekton/pipeline.yaml # This points to your new all-in-one pipeline
   workspaces:
   - name: source
     persistentVolumeClaim:
