--- a/.tekton/microshift-gitops-rpm-push.yaml
+++ b/.tekton/microshift-gitops-rpm-push.yaml
@@ -2,7 +2,7 @@ apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
   annotations:
-    build.appstudio.openshift.io/repo: https://github.com/nmirasch/downstream-dex?rev={{revision}}
+    build.appstudio.openshift.io/repo: https://github.com/nmirasch/konflux-components-testing?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
@@ -17,43 +17,26 @@ metadata:
   namespace: nmirasch-tenant
 spec:
   params:
-  # Parameters for the final RPM artifact
-  - name: ociStorage
-    value: quay.io/redhat-user-workloads/nmirasch-tenant/microshift-gitops-rpm:{{revision}}
-  - name: package-name
-    value: microshift-gitops
-  
-  # Git parameters
   - name: git-url
-    value: "{{ source_url }}"
+    value: '{{source_url}}'
   - name: revision
-    value: "{{ revision }}"
-  - name: target-branch
-    value: "{{ target_branch }}"
-  
-  # New parameter for the temporary tools image
-  - name: tool-image-url
+    value: '{{revision}}'
+  - name: output-image
     value: quay.io/redhat-user-workloads/nmirasch-tenant/microshift-gitops-builder:{{revision}}
-  
-  # General parameters
-  - name: path-context
-    value: "."
-  - name: hermetic
-    value: "true"
-  
+  - name: additional-tags
+    value:
+    - '{{target_branch}}'
+  - name: dockerfile
+    value: Containerfile
+  - name: prefetch-input
+    value: '[{"type": "gomod", "path": "./sources/tools"}]'
+  - name: git-metadata-directories
+    value:
+    - sources/tools
   pipelineRef:
-    resolver: git
-    params:
-    - name: url
-      value: "{{ source_url }}"
-    - name: revision
-      value: "{{ revision }}"
-    - name: pathInRepo
-      value: .tekton/pipeline.yaml # This points to your new all-in-one pipeline
+    name: build-multi-platform-image
   workspaces:
-  - name: source
-    persistentVolumeClaim:
-      claimName: "{{pvc_name}}"
   - name: git-auth
     secret:
       secretName: '{{ git_auth_secret }}'
+status: {}
