added missing parameters

--- a/.tekton/konflux-components-testing-c7034-push.yaml
+++ b/.tekton/konflux-components-testing-c7034-push.yaml
@@ -96,6 +96,10 @@ spec:
         value: "./Containerfile"
       - name: CONTEXT
         value: "."
+      - name: SOURCE_ARTIFACT
+        value: $(tasks.clone-repository.results.SOURCE_ARTIFACT)
+      - name: PLATFORM
+        value: "linux/amd64"
       workspaces:
       - name: source
         workspace: source
