--- a/.tekton/konflux-components-testing-c7034-push.yaml
+++ b/.tekton/konflux-components-testing-c7034-push.yaml
@@ -142,7 +142,7 @@ spec:
   - name: revision
     value: "{{ revision }}"
   - name: output-image
-    value: "quay.io/repository/redhat-user-workloads/nmirasch-tenant/spec-file-generator" # CHANGE THIS to your actual Quay.io username and repository
+    value: "quay.io/redhat-user-workloads/nmirasch-tenant/spec-file-generator:{{revision}}"
   - name: argo-cd-url
     value: "registry.redhat.io/openshift-gitops-1/argocd-rhel9:v1.16"
   - name: redis-url
