--- a/.tekton/konflux-components-testing-c7034-pull-request.yaml
+++ b/.tekton/konflux-components-testing-c7034-pull-request.yaml
@@ -22,7 +22,7 @@ spec:
     params:
     - name: git-url
     - name: revision
-    - name: ociStorage
+    - name: output-image
     - name: argo-cd-url
     - name: redis-url
     - name: source-commit
@@ -32,64 +32,99 @@ spec:
     - name: git-auth
     
     tasks:
-    # TASK 1: Clones git repository into the shared workspace.
-    - name: fetch-repository
-      taskRef: { name: git-clone, kind: ClusterTask }
+    - name: init
+      taskRef:
+        resolver: bundles
+        params:
+        - name: bundle
+          value: quay.io/konflux-ci/tekton-catalog/task-init:0.2@sha256:66e90d31e1386bf516fb548cd3e3f0082b5d0234b8b90dbf9e0d4684b70dbe1a
+        - name: name
+          value: init
+        - name: kind
+          value: task
+      params:
+      - name: image-url
+        value: $(params.output-image)
+      - name: rebuild
+        value: "true"
+    
+    - name: clone-repository
+      runAfter: [init]
+      when:
+      - input: $(tasks.init.results.build)
+        operator: in
+        values:
+        - 'true'
+      taskRef:
+        resolver: bundles
+        params:
+        - name: bundle
+          value: quay.io/konflux-ci/tekton-catalog/task-git-clone-oci-ta:0.1@sha256:d35e5d501cb5f5f88369511f76249857cb5ac30250e1dcf086939321964ff6b9
+        - name: name
+          value: git-clone-oci-ta
+        - name: kind
+          value: task
       params:
       - name: url
         value: $(params.git-url)
       - name: revision
         value: $(params.revision)
+      - name: ociStorage
+        value: "$(params.output-image).source"
       workspaces:
-      - name: output
-        workspace: source
+      - name: basic-auth
+        workspace: git-auth
     
-    # TASK 2: Builds the 'spec-generator' image using the 'buildah' ClusterTask.
-    # It reads the Containerfile from the cloned source code.
     - name: build-spec-generator-image
-      runAfter: [ fetch-repository ]
-      taskRef: { name: buildah, kind: ClusterTask }
+      runAfter: [clone-repository]
+      taskRef:
+        resolver: bundles
+        params:
+        - name: bundle
+          value: quay.io/konflux-ci/tekton-catalog/task-buildah-remote-oci-ta:0.4@sha256:5b8d51fa889cdac873750904c3fccc0cca1c4f65af16902ebb2b573151f80657
+        - name: name
+          value: buildah-remote-oci-ta
+        - name: kind
+          value: task
       params:
       - name: IMAGE
-        # The output image is tagged with the git commit SHA to be unique.
-        value: "$(params.ociStorage)-spec-generator:{{revision}}"
+        value: "$(params.output-image)-spec-generator"
       - name: DOCKERFILE
         value: "./Containerfile"
-      workspaces:
-      - name: source
-        workspace: source
+      - name: CONTEXT
+        value: "."
+      - name: SOURCE_ARTIFACT
+        value: $(tasks.clone-repository.results.SOURCE_ARTIFACT)
+      - name: PLATFORM
+        value: "linux/amd64"
     
-    # TASK 3: Runs your script using the image that was just built in Task 2.
     - name: generate-spec-file
-      runAfter: [ build-spec-generator-image ]
-      taskSpec: # The task is embedded here
+      runAfter: [build-spec-generator-image]
+      taskSpec:
         params:
+        - name: generator-image-url
         - name: argo-cd-url
         - name: redis-url
         - name: source-commit
         - name: source-url
-        - name: generator-image-url
         workspaces:
         - name: source
         steps:
-        - name: generate
-          # This is the key: it uses the output URL from the previous task.
+        - name: run-generator
           image: $(params.generator-image-url)
           workingDir: $(workspaces.source.path)
-          # The script inside passes pipeline params as environment variables
-          # to your shell script.
           script: |
             #!/bin/bash
             set -euxo pipefail
+            echo "Running spec generator..."
             export ARGO_CD_IMAGE_URL_WITH_TAG="$(params.argo-cd-url)"
             export REDIS_IMAGE_URL_WITH_TAG="$(params.redis-url)"
             export CI_ARGO_CD_UPSTREAM_COMMIT="$(params.source-commit)"
             export CI_ARGO_CD_UPSTREAM_URL="$(params.source-url)"
-            ./scripts/generate-spec-only.sh
-      workspaces:
-      - name: source
-        workspace: source
+            ./scripts/generate-spec.sh
       params:
+      - name: generator-image-url
+        value: $(tasks.build-spec-generator-image.results.IMAGE_URL)
       - name: argo-cd-url
         value: $(params.argo-cd-url)
       - name: redis-url
@@ -98,22 +133,23 @@ spec:
         value: $(params.source-commit)
       - name: source-url
         value: $(params.source-url)
-      - name: generator-image-url
-        value: $(tasks.build-spec-generator-image.results.IMAGE_URL)
+      workspaces:
+      - name: source
+        workspace: source
   
   params:
   - name: git-url
     value: "{{ source_url }}"
   - name: revision
     value: "{{ revision }}"
-  - name: ociStorage
-    value: "quay.io/redhat-user-workloads/nmirasch-tenant/konflux-components-testing-c7034"
+  - name: output-image
+    value: "quay.io/redhat-user-workloads/nmirasch-tenant/spec-file-generator:{{revision}}"
   - name: argo-cd-url
-    value: "registry.redhat.io/openshift-gitops-1/argocd-rhel9:gitops-1.17-rhel-9-candidate"
+    value: "registry.redhat.io/openshift-gitops-1/argocd-rhel9:v1.16"
   - name: redis-url
-    value: "registry.redhat.io/rhel9/redis-6:rhel-9.3.0-container-released"
+    value: "registry.redhat.io/rhel9/redis-6:9.6"
   - name: source-commit
-    value: "a1b2c3d4"
+    value: "bfa7247"
   - name: source-url
     value: "https://github.com/argoproj/argo-cd"
   
@@ -121,7 +157,7 @@ spec:
   - name: source
     volumeClaimTemplate:
       spec:
-        accessModes: [ ReadWriteOnce ]
+        accessModes: [ReadWriteOnce]
         resources: { requests: { storage: 1Gi } }
   - name: git-auth
     secret:
