--- a/.tekton/konflux-components-testing-c7034-push.yaml
+++ b/.tekton/konflux-components-testing-c7034-push.yaml
@@ -48,28 +48,31 @@ spec:
         value: "true"
     
     - name: clone-repository
-      runAfter: [init]
-      when:
-      - input: $(tasks.init.results.build)
-        operator: in
-        values:
-        - 'true'
-      taskRef:
-        resolver: bundles
-        params:
-        - name: bundle
-          value: quay.io/konflux-ci/tekton-catalog/task-git-clone-oci-ta:0.1@sha256:d35e5d501cb5f5f88369511f76249857cb5ac30250e1dcf086939321964ff6b9
-        - name: name
-          value: git-clone-oci-ta
-        - name: kind
-          value: task
       params:
       - name: url
         value: $(params.git-url)
       - name: revision
         value: $(params.revision)
       - name: ociStorage
-        value: "$(params.output-image).source"
+        value: $(params.output-image).git
+      - name: ociArtifactExpiresAfter
+        value: $(params.image-expires-after)
+      runAfter:
+      - init
+      taskRef:
+        params:
+        - name: name
+          value: git-clone-oci-ta
+        - name: bundle
+          value: quay.io/konflux-ci/tekton-catalog/task-git-clone-oci-ta:0.1@sha256:0761f97595d42c87c076797e0d0f66ff572146cad958106b7f5446b182d03394
+        - name: kind
+          value: task
+        resolver: bundles
+      when:
+      - input: $(tasks.init.results.build)
+        operator: in
+        values:
+        - "true"
       workspaces:
       - name: basic-auth
         workspace: git-auth
