--- a/.tekton/konflux-components-testing-c7034-push.yaml
+++ b/.tekton/konflux-components-testing-c7034-push.yaml
@@ -48,13 +48,18 @@ spec:
         value: "true"
     
     - name: clone-repository
+      retries: 3
       params:
       - name: url
         value: $(params.git-url)
       - name: revision
         value: $(params.revision)
+      - name: depth
+        value: 0
       - name: ociStorage
-        value: $(params.output-image).git
+        value: $(params.ociStorage).git
+      - name: ociArtifactExpiresAfter
+        value: 14d
       runAfter:
       - init
       taskRef:
@@ -62,15 +67,10 @@ spec:
         - name: name
           value: git-clone-oci-ta
         - name: bundle
-          value: quay.io/konflux-ci/tekton-catalog/task-git-clone-oci-ta:0.1@sha256:0761f97595d42c87c076797e0d0f66ff572146cad958106b7f5446b182d03394
+          value: quay.io/konflux-ci/tekton-catalog/task-git-clone-oci-ta:0.1@sha256:d35e5d501cb5f5f88369511f76249857cb5ac30250e1dcf086939321964ff6b9
         - name: kind
           value: task
         resolver: bundles
-      when:
-      - input: $(tasks.init.results.build)
-        operator: in
-        values:
-        - "true"
       workspaces:
       - name: basic-auth
         workspace: git-auth
@@ -143,7 +143,7 @@ spec:
   - name: revision
     value: "{{ revision }}"
   - name: output-image
-    value: "quay.io/repository/nmirasch/spec-file-generator:{{revision}}"
+    value: "quay.io/redhat-user-workloads/nmirasch-tenant/spec-file-generator:{{revision}}"
   - name: argo-cd-url
     value: "registry.redhat.io/openshift-gitops-1/argocd-rhel9:v1.16"
   - name: redis-url
@@ -160,5 +160,4 @@ spec:
         accessModes: [ReadWriteOnce]
         resources: { requests: { storage: 1Gi } }
   - name: git-auth
-    secret:
-      secretName: '{{ git_auth_secret }}'
+    optional: true
